--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
 
             <div class="login-link">
-                Already have an account? <a href="login.html">Login</a>
+                Already have an account? <a href="#">Login</a>
             </div>
 
         </div>
