--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <link rel="stylesheet" href="./assets/media.css">
     <!-- CSS -->
 
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <!-- FAVICON -->
+
 </head>
 
 <body>
