--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- CSS -->
 
     <!-- FAVICON -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <!-- FAVICON -->
 
 </head>
